test/corpus/scatter_assignments.txt
===================
Basic scatter assignment
===================

{a, b, c} = some_list;

---

(program
  (assignment_expr
    left: (scatter_pattern
      (scatter
        (scatter_target
          (identifier))
        (scatter_target
          (identifier))
        (scatter_target
          (identifier))))
    right: (identifier)))

===================
Scatter assignment in let statement
===================

let {first, second, @rest} = my_list;

---

(program
  (local_assignment
    (scatter_pattern
      (scatter
        (scatter_target
          (identifier))
        (scatter_target
          (identifier))
        (scatter_rest
          (identifier))))
    (identifier)))

===================
Scatter assignment in const statement
===================

const {x, ?y = 10, @remaining} = data;

---

(program
  (const_assignment
    (scatter_pattern
      (scatter
        (scatter_target
          (identifier))
        (scatter_optional
          (identifier)
          (INTEGER))
        (scatter_rest
          (identifier))))
    (identifier)))

===================
Lambda with scatter parameters
===================

let handler = {?code = E_NONE, @args} => handle(code, args);

---

(program
  (local_assignment
    (identifier)
    (lambda_expr
      params: (lambda_params
        (lambda_param
          (scatter_optional
            (identifier)
            (identifier)))
        (lambda_param
          (scatter_rest
            (identifier))))
      body: (call
        function: (identifier)
        arguments: (arglist
          (identifier)
          (identifier))))))
